<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <kr.co.ryuboutin.ui.custom.NestedScrollableHost
        android:id="@+id/view_pager_host"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/view_pager_host"
            app:layout_constraintStart_toStartOf="@+id/view_pager_host"
            app:layout_constraintTop_toTopOf="@+id/view_pager_host" />


    </kr.co.ryuboutin.ui.custom.NestedScrollableHost>

    <kr.co.ryuboutin.ui.custom.ImageTextButton
        android:id="@+id/btn1"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:setImageButtonText="@string/button_text_weeks_brand"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_pager_host" />

    <kr.co.ryuboutin.ui.custom.ImageTextButton
        android:id="@+id/btn2"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:setImageButtonText="@string/button_text_male_recommend"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/view_pager_host" />

    <kr.co.ryuboutin.ui.custom.ImageTextButton
        android:id="@+id/btn3"
        android:layout_marginTop="10dp"
        app:setImageButtonText="@string/button_text_female_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/btn4"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/view_pager_host" />

    <kr.co.ryuboutin.ui.custom.ImageTextButton
        android:id="@+id/btn4"
        android:layout_marginTop="10dp"
        app:setImageButtonText="@string/button_text_lucky_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/view_pager_host" />

    <kr.co.ryuboutin.ui.custom.ImageTextButton
        android:id="@+id/btn5"
        android:layout_marginTop="10dp"
        app:setImageButtonText="@string/button_text_chick_promotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/view_pager_host" />

    <kr.co.ryuboutin.ui.custom.ImageTextButton
        android:id="@+id/btn6"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:setImageButtonText="@string/button_text_low_price"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn7" />

    <kr.co.ryuboutin.ui.custom.ImageTextButton
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:setImageButtonText="@string/button_text_popularity_luxury"
        app:layout_constraintBottom_toBottomOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintStart_toEndOf="@id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn6" />

    <kr.co.ryuboutin.ui.custom.ImageTextButton
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:setImageButtonText="@string/button_text_worldcup"
        app:layout_constraintBottom_toBottomOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <kr.co.ryuboutin.ui.custom.ImageTextButton
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:setImageButtonText="@string/button_text_daily_codi"
        app:layout_constraintBottom_toBottomOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btn10"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <kr.co.ryuboutin.ui.custom.ImageTextButton
        android:id="@+id/btn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:setImageButtonText="@string/button_text_best_outer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn9"
        app:layout_constraintTop_toTopOf="@+id/btn9" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>